shadows overlapping fix

--- a/src/app/components/other/MentorSearch/MentorSearch.scss
+++ b/src/app/components/other/MentorSearch/MentorSearch.scss
@@ -105,7 +105,6 @@
 	width: 5em;
 	height: 100%;
 	background: linear-gradient(90deg, $color-black-main 0%, transparent 100%);
-	z-index: 1;
 	cursor: e-resize;
 
 	&--left {
